--- a/tlc_top_summary.html
+++ b/tlc_top_summary.html
@@ -7,7 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Elevator.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='C:/Users/Xilinx_projects/Final/Elevator\_xmsgs/pn_parser.xmsgs?&DataKey=Error'>6 Errors</A></TD>
+<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/pn_parser.xmsgs?&DataKey=Error'>6 Errors</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -75,5 +75,5 @@
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/14/2023 - 22:00:50</center>
+<br><center><b>Date Generated:</b> 12/16/2023 - 11:37:42</center>
 </BODY></HTML>
