--- a/tlc_top_summary.html
+++ b/tlc_top_summary.html
@@ -7,7 +7,7 @@
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Elevator.xise</TD>
 <TD BGCOLOR='#FFFF99'><b>Parser Errors:</b></TD>
-<TD ALIGN=LEFT><font color='red'; face='Arial'><b>X </b></font><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/pn_parser.xmsgs?&DataKey=Error'>43 Errors</A></TD>
+<TD> No Errors </TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
@@ -78,5 +78,5 @@ System Settings</A>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/16/2023 - 19:33:11</center>
+<br><center><b>Date Generated:</b> 12/16/2023 - 22:07:12</center>
 </BODY></HTML>
