--- a/parking_lot_top_summary.html
+++ b/parking_lot_top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>tlc_top Project Status (12/17/2023 - 02:39:35)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>tlc_top Project Status (12/17/2023 - 10:32:22)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Elevator.xise</TD>
@@ -21,7 +21,7 @@
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
 <font color="red"; face="Arial"><b>X </b></font>
-<A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/*.xmsgs?&DataKey=Error'>2 Errors (0 new)</A></TD>
+<A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/*.xmsgs?&DataKey=Error'>1 Error (1 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
@@ -66,7 +66,7 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/parking_lot_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Dec 17 02:39:35 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/xst.xmsgs?&DataKey=Error'>2 Errors (0 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/parking_lot_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Dec 17 10:32:22 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/xst.xmsgs?&DataKey=Error'>1 Error (1 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/parking_lot_top.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>Sun Dec 17 02:16:13 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/ngdbuild.xmsgs?&DataKey=Error'>23 Errors (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>23 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -77,9 +77,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sun Dec 17 02:33:47 2023</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sun Dec 17 08:46:04 2023</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/17/2023 - 02:39:36</center>
+<br><center><b>Date Generated:</b> 12/17/2023 - 10:32:30</center>
 </BODY></HTML>
