--- a/parking_lot_top_envsettings.html
+++ b/parking_lot_top_envsettings.html
@@ -14,44 +14,51 @@
 <td><b>par</b></td>
 </tr>
 <tr>
-<td>LD_LIBRARY_PATH</td>
-<td>/opt/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/opt/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/opt/Xilinx/14.7/ISE_DS/common/lib/lin64</td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE//lib/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/lib/lin64:<br>/opt/Xilinx/14.7/ISE_DS/EDK/lib/lin64:<br>/opt/Xilinx/14.7/ISE_DS/common/lib/lin64</font></td>
+<td>PATHEXT</td>
+<td>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</td>
+<td><font color=gray>.COM;<br>.EXE;<br>.BAT;<br>.CMD;<br>.VBS;<br>.VBE;<br>.JS;<br>.JSE;<br>.WSF;<br>.WSH;<br>.MSC</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
-<td>PATH</td>
-<td>/opt/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/opt/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/opt/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/opt/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/home/luorix/miniconda3/bin:<br>/home/luorix/miniconda3/condabin:<br>/home/luorix/.local/bin:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/usr/games:<br>/usr/local/games:<br>/snap/bin</td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE//bin/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/bin/lin64:<br>/opt/Xilinx/14.7/ISE_DS/ISE/sysgen/util:<br>/opt/Xilinx/14.7/ISE_DS/ISE/../../../DocNav:<br>/opt/Xilinx/14.7/ISE_DS/PlanAhead/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/bin/lin64:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/lin/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/powerpc-eabi/lin/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/arm/lin/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_be/bin:<br>/opt/Xilinx/14.7/ISE_DS/EDK/gnu/microblaze/linux_toolchain/lin64_le/bin:<br>/opt/Xilinx/14.7/ISE_DS/common/bin/lin64:<br>/home/luorix/miniconda3/bin:<br>/home/luorix/miniconda3/condabin:<br>/home/luorix/.local/bin:<br>/usr/local/sbin:<br>/usr/local/bin:<br>/usr/sbin:<br>/usr/bin:<br>/sbin:<br>/bin:<br>/usr/games:<br>/usr/local/games:<br>/snap/bin</font></td>
+<td>Path</td>
+<td>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files\NVIDIA Corporation\NVIDIA NvDLISR;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\dotnet\;<br>C:\Program Files\Git\cmd;<br>C:\Users\Á¤À±È£\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Á¤À±È£\AppData\Local\Programs\Microsoft VS Code\bin</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\ISE\..\..\..\DocNav;<br>C:\Xilinx\14.7\ISE_DS\PlanAhead\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\lib\nt64;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\powerpc-eabi\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnuwin\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\arm\nt\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_be\bin;<br>C:\Xilinx\14.7\ISE_DS\EDK\gnu\microblaze\linux_toolchain\nt64_le\bin;<br>C:\Xilinx\14.7\ISE_DS\common\bin\nt64;<br>C:\Xilinx\14.7\ISE_DS\common\lib\nt64;<br>C:\Windows\system32;<br>C:\Windows;<br>C:\Windows\System32\Wbem;<br>C:\Windows\System32\WindowsPowerShell\v1.0\;<br>C:\Windows\System32\OpenSSH\;<br>C:\Program Files\NVIDIA Corporation\NVIDIA NvDLISR;<br>C:\Program Files (x86)\NVIDIA Corporation\PhysX\Common;<br>C:\Program Files\dotnet\;<br>C:\Program Files\Git\cmd;<br>C:\Users\Á¤À±È£\AppData\Local\Microsoft\WindowsApps;<br>C:\Users\Á¤À±È£\AppData\Local\Programs\Microsoft VS Code\bin</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX</td>
-<td>/opt/Xilinx/14.7/ISE_DS/ISE/</td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE/</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\ISE\</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE\</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+<td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
+</tr>
+<tr>
+<td>XILINXD_LICENSE_FILE</td>
+<td>C:\Users\Á¤À±È£\Downloads</td>
+<td><font color=gray>C:\Users\Á¤À±È£\Downloads</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_DSP</td>
-<td>/opt/Xilinx/14.7/ISE_DS/ISE</td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/ISE</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\ISE</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\ISE</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_EDK</td>
-<td>/opt/Xilinx/14.7/ISE_DS/EDK</td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/EDK</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\EDK</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\EDK</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>XILINX_PLANAHEAD</td>
-<td>/opt/Xilinx/14.7/ISE_DS/PlanAhead</td>
-<td><font color=gray>/opt/Xilinx/14.7/ISE_DS/PlanAhead</font></td>
+<td>C:\Xilinx\14.7\ISE_DS\PlanAhead</td>
+<td><font color=gray>C:\Xilinx\14.7\ISE_DS\PlanAhead</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp;data not available&nbsp;&gt;</font></td>
 </tr>
@@ -388,31 +395,30 @@
 </tr>
 <tr>
 <td>CPU Architecture/Speed</td>
-<td>AMD Ryzen 9 3950X 16-Core Processor/2195.759 MHz</td>
-<td><font color=gray>AMD Ryzen 9 3950X 16-Core Processor/2195.065 MHz</font></td>
+<td>AMD Ryzen 7 7800X3D 8-Core Processor           /4192 MHz</td>
+<td><font color=gray>AMD Ryzen 7 7800X3D 8-Core Processor           /4192 MHz</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>Host</td>
-<td>luorix-server</td>
-<td><font color=gray>luorix-server</font></td>
+<td>DESKTOP-TTQPSJE</td>
+<td><font color=gray>DESKTOP-TTQPSJE</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>OS Name</td>
-<td>Ubuntu</td>
-<td><font color=gray>Ubuntu</font></td>
+<td>Microsoft , 64-bit</td>
+<td><font color=gray>Microsoft , 64-bit</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
 <tr>
 <td>OS Release</td>
-<td>Ubuntu 22.04.3 LTS</td>
-<td><font color=gray>Ubuntu 22.04.3 LTS</font></td>
+<td>major release  (build 9200)</td>
+<td><font color=gray>major release  (build 9200)</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 <td><font color=gray>&lt;&nbsp; data not available &nbsp;&gt;</font></td>
 </tr>
-</TABLE>
-</BODY> </HTML>
+</TABL
