--- a/parking_lot_top_summary.html
+++ b/parking_lot_top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>tlc_top Project Status (12/17/2023 - 10:32:42)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>parking_lot_top Project Status (12/17/2023 - 11:47:05)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Elevator.xise</TD>
@@ -13,19 +13,18 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>parking_lot_top</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Synthesized</TD>
+<TD>Synthesized (Stopped)</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc3s200-4ft256</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>
-No Errors</TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/*.xmsgs?&DataKey=Warning'>779 Warnings (779 new)</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -43,46 +42,17 @@ No Errors</TD>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/parking_lot_top_envsettings.html'>
+<A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\parking_lot_top_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>&nbsp;&nbsp;</TD>
+<TD>&nbsp;</TD>
 </TR>
 </TABLE>
 
 
 
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='4'><B>Device Utilization Summary (estimated values)</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary(estimatedvalues)"><B>[-]</B></a></TD></TR>
-<TR ALIGN=CENTER BGCOLOR='#FFFF99'>
-<TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD COLSPAN='2'><B>Utilization</B></TD></TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slices</TD>
-<TD ALIGN=RIGHT>59</TD>
-<TD ALIGN=RIGHT>1920</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>3%</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of Slice Flip Flops</TD>
-<TD ALIGN=RIGHT>56</TD>
-<TD ALIGN=RIGHT>3840</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>1%</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>104</TD>
-<TD ALIGN=RIGHT>3840</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>2%</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded IOBs</TD>
-<TD ALIGN=RIGHT>278</TD>
-<TD ALIGN=RIGHT>173</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>160%</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of GCLKs</TD>
-<TD ALIGN=RIGHT>1</TD>
-<TD ALIGN=RIGHT>8</TD>
-<TD ALIGN=RIGHT COLSPAN='2'>12%</TD>
-</TR>
-</TABLE>
+
 
 
 
@@ -94,8 +64,8 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/parking_lot_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Dec 17 10:32:42 2023</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/xst.xmsgs?&DataKey=Warning'>779 Warnings (779 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/xst.xmsgs?&DataKey=Info'>13 Infos (13 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/parking_lot_top.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>Sun Dec 17 02:16:13 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/ngdbuild.xmsgs?&DataKey=Error'>23 Errors (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>23 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\parking_lot_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>¿œ 12 17 11:46:43 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/xst.xmsgs?&DataKey=Error'>3 Errors (3 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/xst.xmsgs?&DataKey=Warning'>278 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/xst.xmsgs?&DataKey=Info'>11 Infos (1 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\parking_lot_top.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>¿œ 12 17 11:16:15 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/ngdbuild.xmsgs?&DataKey=Error'>23 Errors (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/ngdbuild.xmsgs?&DataKey=Warning'>23 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
 <TR ALIGN=LEFT><TD>Map Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -105,9 +75,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/Digital-Logic-Design-F2023/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sun Dec 17 10:33:08 2023</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>¿œ 12 17 11:40:44 2023</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/17/2023 - 10:39:09</center>
-</BODY></HTML>
+<br><center><b>Date Generated:</b> 12/17/2023 - 11:47:05</center>
+</BODY></HT
