--- a/parking_lot_top_summary.html
+++ b/parking_lot_top_summary.html
@@ -2,7 +2,7 @@
 <BODY TEXT='#000000' BGCOLOR='#FFFFFF' LINK='#0000EE' VLINK='#551A8B' ALINK='#FF0000'>
 <TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'>
-<TD ALIGN=CENTER COLSPAN='4'><B>parking_lot_top Project Status (12/17/2023 - 14:17:42)</B></TD></TR>
+<TD ALIGN=CENTER COLSPAN='4'><B>parking_lot_top Project Status (12/17/2023 - 19:41:53)</B></TD></TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Project File:</B></TD>
 <TD>Elevator.xise</TD>
@@ -13,20 +13,18 @@
 <TD BGCOLOR='#FFFF99'><B>Module Name:</B></TD>
 <TD>parking_lot_top</TD>
 <TD BGCOLOR='#FFFF99'><B>Implementation State:</B></TD>
-<TD>Mapped (Failed)</TD>
+<TD>Synthesized (Stopped)</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Target Device:</B></TD>
 <TD>xc3s200-4ft256</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
-<TD>
-<font color="red"; face="Arial"><b>X </b></font>
-<A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/*.xmsgs?&DataKey=Error'>2 Errors (0 new)</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/*.xmsgs?&DataKey=Warning'>332 Warnings (36 new)</A></TD>
+<TD>&nbsp;</TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -48,108 +46,13 @@
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
-<TD>&nbsp;&nbsp;</TD>
+<TD>&nbsp;</TD>
 </TR>
 </TABLE>
 
 
 
-&nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
-<TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='5'><B>Device Utilization Summary</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DeviceUtilizationSummary"><B>[-]</B></a></TD></TR>
-<TR ALIGN=CENTER BGCOLOR='#FFFF99'>
-<TD ALIGN=LEFT><B>Logic Utilization</B></TD><TD><B>Used</B></TD><TD><B>Available</B></TD><TD><B>Utilization</B></TD><TD COLSPAN='2'><B>Note(s)</B></TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number Slice Registers</TD>
-<TD ALIGN=RIGHT>525</TD>
-<TD ALIGN=RIGHT>3,840</TD>
-<TD ALIGN=RIGHT>13%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Flip Flops</TD>
-<TD ALIGN=RIGHT>254</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as Latches</TD>
-<TD ALIGN=RIGHT>271</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>871</TD>
-<TD ALIGN=RIGHT>3,840</TD>
-<TD ALIGN=RIGHT>22%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of occupied Slices</TD>
-<TD ALIGN=RIGHT>638</TD>
-<TD ALIGN=RIGHT>1,920</TD>
-<TD ALIGN=RIGHT>33%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing only related logic</TD>
-<TD ALIGN=RIGHT>638</TD>
-<TD ALIGN=RIGHT>638</TD>
-<TD ALIGN=RIGHT>100%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number of Slices containing unrelated logic</TD>
-<TD ALIGN=RIGHT>0</TD>
-<TD ALIGN=RIGHT>638</TD>
-<TD ALIGN=RIGHT>0%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Total Number of 4 input LUTs</TD>
-<TD ALIGN=RIGHT>970</TD>
-<TD ALIGN=RIGHT>3,840</TD>
-<TD ALIGN=RIGHT>25%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as logic</TD>
-<TD ALIGN=RIGHT>871</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;Number used as a route-thru</TD>
-<TD ALIGN=RIGHT>99</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/parking_lot_top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
-<TD ALIGN=RIGHT>303</TD>
-<TD ALIGN=RIGHT>173</TD>
-<TD ALIGN=RIGHT>175%</TD>
-<TD COLSPAN='2'>OVERMAPPED</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;IOB Flip Flops</TD>
-<TD ALIGN=RIGHT>6</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>&nbsp;&nbsp;&nbsp;&nbsp;IOB Latches</TD>
-<TD ALIGN=RIGHT>225</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of BUFGMUXs</TD>
-<TD ALIGN=RIGHT>2</TD>
-<TD ALIGN=RIGHT>8</TD>
-<TD ALIGN=RIGHT>25%</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Average Fanout of Non-Clock Nets</TD>
-<TD ALIGN=RIGHT>3.90</TD>
-<TD>&nbsp;</TD>
-<TD>&nbsp;</TD>
-<TD COLSPAN='2'>&nbsp;</TD>
-</TR>
-</TABLE>
+
 
 
 
@@ -161,9 +64,9 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/parking_lot_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Dec 17 14:14:39 2023</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/xst.xmsgs?&DataKey=Warning'>312 Warnings (36 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/xst.xmsgs?&DataKey=Info'>12 Infos (2 new)</A></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/parking_lot_top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Sun Dec 17 14:15:43 2023</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/parking_lot_top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Sun Dec 17 14:17:41 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/map.xmsgs?&DataKey=Error'>2 Errors (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/map.xmsgs?&DataKey=Warning'>20 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/parking_lot_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Sun Dec 17 19:41:33 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/xst.xmsgs?&DataKey=Error'>1 Error (1 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/parking_lot_top.bld'>Translation Report</A></TD><TD>Out of Date</TD><TD>Sun Dec 17 14:15:43 2023</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/parking_lot_top_map.mrp'>Map Report</A></TD><TD>Out of Date</TD><TD>Sun Dec 17 14:17:41 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/map.xmsgs?&DataKey=Error'>2 Errors (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/map.xmsgs?&DataKey=Warning'>20 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Post-PAR Static Timing Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -172,9 +75,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sun Dec 17 14:19:21 2023</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Desktop/DLD/Digital-Logic-Design-F2023/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Sun Dec 17 19:42:30 2023</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/17/2023 - 14:19:43</center>
+<br><center><b>Date Generated:</b> 12/17/2023 - 19:43:22</center>
 </BODY></HTML>
