Update fee calculation

--- a/parking_lot_top_summary.html
+++ b/parking_lot_top_summary.html
@@ -21,12 +21,12 @@
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Errors:</B></LI></UL></TD>
 <TD>
 <font color="red"; face="Arial"><b>X </b></font>
-<A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/*.xmsgs?&DataKey=Error'>3 Errors (1 new)</A></TD>
+<A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/_xmsgs/*.xmsgs?&DataKey=Error'>3 Errors (1 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Product Version:</B></TD><TD>ISE 14.7</TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Warnings:</B></LI></UL></TD>
-<TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/*.xmsgs?&DataKey=Warning'>20 Warnings (0 new)</A></TD>
+<TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/_xmsgs/*.xmsgs?&DataKey=Warning'>20 Warnings (0 new)</A></TD>
 </TR>
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Design Goal:</B></dif></TD>
@@ -44,7 +44,7 @@
 <TR ALIGN=LEFT>
 <TD BGCOLOR='#FFFF99'><B>Environment:</B></dif></TD>
 <TD>
-<A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\parking_lot_top_envsettings.html'>
+<A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/parking_lot_top_envsettings.html'>
 System Settings</A>
 </TD>
 <TD BGCOLOR='#FFFF99'><UL><LI><B>Final Timing Score:</B></LI></UL></TD>
@@ -119,7 +119,7 @@ System Settings</A>
 <TD>&nbsp;</TD>
 <TD COLSPAN='2'>&nbsp;</TD>
 </TR>
-<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\parking_lot_top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
+<TR ALIGN=RIGHT><TD ALIGN=LEFT>Number of bonded <A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/parking_lot_top_map.xrpt?&DataKey=IOBProperties'>IOBs</A></TD>
 <TD ALIGN=RIGHT>303</TD>
 <TD ALIGN=RIGHT>173</TD>
 <TD ALIGN=RIGHT>175%</TD>
@@ -161,9 +161,9 @@ System Settings</A>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='6'><B>Detailed Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=DetailedReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD><B>Generated</B></TD>
 <TD ALIGN=LEFT><B>Errors</B></TD><TD ALIGN=LEFT><B>Warnings</B></TD><TD ALIGN=LEFT COLSPAN='2'><B>Infos</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\parking_lot_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>老 12 17 19:47:31 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/xst.xmsgs?&DataKey=Error'>1 Error (1 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\parking_lot_top.bld'>Translation Report</A></TD><TD>Current</TD><TD>老 12 17 19:47:31 2023</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\parking_lot_top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>老 12 17 19:47:31 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/map.xmsgs?&DataKey=Error'>2 Errors (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/map.xmsgs?&DataKey=Warning'>20 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/parking_lot_top.syr'>Synthesis Report</A></TD><TD>Current</TD><TD>Mon Dec 18 19:25:05 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/_xmsgs/xst.xmsgs?&DataKey=Error'>1 Error (1 new)</A></TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/parking_lot_top.bld'>Translation Report</A></TD><TD>Current</TD><TD>Mon Dec 18 19:25:05 2023</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT>0</TD><TD ALIGN=LEFT COLSPAN='2'>0</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/parking_lot_top_map.mrp'>Map Report</A></TD><TD>Current</TD><TD>Mon Dec 18 19:25:05 2023</TD><TD ALIGN=LEFT><font color="red"; face="Arial"><b>X </b></font><A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/_xmsgs/map.xmsgs?&DataKey=Error'>2 Errors (0 new)</A></TD><TD ALIGN=LEFT><A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/_xmsgs/map.xmsgs?&DataKey=Warning'>20 Warnings (0 new)</A></TD><TD ALIGN=LEFT COLSPAN='2'><A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/_xmsgs/map.xmsgs?&DataKey=Info'>4 Infos (0 new)</A></TD></TR>
 <TR ALIGN=LEFT><TD>Place and Route Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Power Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
 <TR ALIGN=LEFT><TD>Post-PAR Static Timing Report</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD>&nbsp;</TD><TD COLSPAN='2'>&nbsp;</TD></TR>
@@ -172,9 +172,9 @@ System Settings</A>
 &nbsp;<BR><TABLE BORDER CELLSPACING=0 CELLPADDING=3 WIDTH='100%'>
 <TR ALIGN=CENTER BGCOLOR='#99CCFF'><TD ALIGN=CENTER COLSPAN='3'><B>Secondary Reports</B></TD><TD ALIGN=RIGHT WIDTH='10%'COLSPAN=1> <A HREF_DISABLED="?&ExpandedTable=SecondaryReports"><B>[-]</B></a></TD></TR>
 <TR BGCOLOR='#FFFF99'><TD><B>Report Name</B></TD><TD><B>Status</B></TD><TD COLSPAN='2'><B>Generated</B></TD></TR>
-<TR ALIGN=LEFT><TD><A HREF_DISABLED='C:/Users/Xilinx_projects/Digital-Logic-Design-F2023\isim.log'>ISIM Simulator Log</A></TD><TD>Current</TD><TD COLSPAN='2'>老 12 17 21:30:29 2023</TD></TR>
+<TR ALIGN=LEFT><TD><A HREF_DISABLED='/home/luorix/Downloads/Digital-Logic-Design-F2023-1218_w-leakage/isim.log'>ISIM Simulator Log</A></TD><TD>Out of Date</TD><TD COLSPAN='2'>Mon Dec 18 19:25:05 2023</TD></TR>
 </TABLE>
 
 
-<br><center><b>Date Generated:</b> 12/17/2023 - 21:33:01</center>
-</BODY></H
+<br><center><b>Date Generated:</b> 12/18/2023 - 19:30:43</center>
+</BODY></HTML>
